--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -45,7 +45,7 @@
             </div>
         </div>
     </div>
-    <%= javascript_include_tag 'home.js', media: 'all', 'data-turbolinks-track': 'reload'%>
+    <%= javascript_include_tag 'home.js'%>
 </div>
 
 
