--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,7 @@
 
 
 <!------ Include the above in your HEAD tag ---------->
+<body>
 <div class="container">
     <div class="row">
         <div class="col-md-6">
@@ -45,8 +46,11 @@
             </div>
         </div>
     </div>
-    <%= javascript_include_tag 'home.js'%>
 </div>
+<body>
+
+
+     <%= javascript_include_tag 'home.js'%>
 
 
 
