--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,5 @@
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 
-
 <!------ Include the above in your HEAD tag ---------->
 <body>
 <div class="container">
@@ -48,7 +47,7 @@
     </div>
 </div>
 <body>
-
+<%= javascript_include_tag 'home',media: 'all', 'data-turbolinks-track': 'reload'%>
 
 
 
