--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -31,6 +31,8 @@
                                 	<!-- xem todo list -->
 	                                <dt class="text-muted" >Title: <dd class="text-danger"> <%= @todo.title %></dd></dt>
 	                                <dt class="text-muted">Notes: <dd class="text-danger"> <%= @todo.notes %></dd></dt>
+                                    <dt class="text-muted">Created at: <dd class="text-danger"> <%= @todo.created_at %></dd></dt>
+                                    
 	                                <!-- -->
 	                            </pre>
                             </label>
