--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -14,6 +14,7 @@
   <tbody>
     <% @profiles.each do |profile| %>
       <tr>
+        
         <td><%= link_to profile.id, profile_path(profile) %></td>
         <td><%= profile.username %></td>
         <td><%=l profile.created_at %></td>
@@ -36,3 +37,17 @@
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_profile_path,
             :class => 'btn btn-primary' %>
+
+
+
+
+<p id="notice"><%= notice %></p>
+
+
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+
+<!------ Include the above in your HEAD tag ---------->
+
+
+
