--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="todolist not-done">
-             <h1>Todos</h1>
+             <h1> Ghi Nhớ Công Việc <br>(Todos)</br></h1>
                 <br><input type="text" class="form-control add-todo" placeholder="Add todo"></br>
                     <button id="checkAll" class="btn btn-success">Mark all as done</button>
                    
@@ -15,7 +15,7 @@
                     <li class="ui-state-default">
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" value="" />Take out the trash</label>
+                                <input type="checkbox" value="" />18h 3/1/2020 Tham gia shark tank</label>
                         </div>
                     </li>
                     <li class="ui-state-default">
@@ -40,7 +40,7 @@
             <div class="todolist">
              <h1>Already Done</h1>
                 <ul id="done-items" class="list-unstyled">
-                    <li>Some item <button class="remove-item btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-remove"></span></button></li>
+                    <li>1/11/2019 Nhận hàng ship trên eBay <button class="remove-item btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-remove"></span></button></li>
                 </ul>
             </div>
         </div>
