--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -3,8 +3,7 @@ body{
 }
 .todolist{
     background-color:#FFF;
-    padding:20px 20px 10px 20px;
-    margin-top:30px;
+
 }
 .todolist h1{
     margin:0;
@@ -38,5 +37,9 @@ li.ui-state-default:last-child{
     border-bottom:none;
 }
 #checkAll{
-    margin-top:10px;
+   
+}
+#mid{
+    color: #989898;
+    text-align: center;
 }
