--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,19 +1,122 @@
+
+
 <%- model_class = Profile -%>
+
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+
+
+
+
+
+  <h2><strong>Welcome  <small class ="text-success"><%= @profile.username %></small></strong></h2>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:username) %>:</strong></dt>
-  <dd><%= @profile.username %></dd>
-</dl>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<style> 
+			.test:hover{
+            	
+            	text-decoration: none;
+            } 
+            .test{
+            	text-align: right;
+            }
+            label {
+    		
+    			margin-right:50px;
+    		}
+    		div.testform{
+    			 position: relative;
+				  width: 100%;
+				  height: 100%;
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              profiles_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_profile_path(@profile), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              profile_path(@profile),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+			}
+           pre { 
+              	background-color : #fdffe2;
+                white-space: pre-wrap;
+				white-space: -moz-pre-wrap;
+				white-space: -pre-wrap;
+				white-space: -o-pre-wrap;
+				word-wrap: break-word;
+				line-height: 0.5;   
+				word-break: break-all;
+				white-space: pre-wrap;
+				white-space: pre\9; /* IE7+ */
+				display: block;
+                
+            } 
+        
+
+			div.test{
+			  position: absolute;
+
+			  right: 0;
+			  width: 200px;
+			  height: 50px;
+			 
+			
+			}
+           
+</style> 
+<%= form_with(model: [@profile, @profile.todos.build]) do |f|%>
+<!------ Include the above in your HEAD tag ---------->
+<%= javascript_include_tag  'home', media: 'all', 'data-turbolinks-track': 'reload' %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="todolist not-done">
+             		
+      				<!--<input type="text" class="form-control add-todo" placeholder="Add todo"> them vao todo -->
+      				<pre>
+      					<h1>Todos</h1>
+	             		<%= f.text_field :title , class: "form-control add-todo", placeholder: "Add title" %>
+	             		<%= f.text_field :notes , class: "form-control add-todo2", placeholder: "Add notes" %>
+	             	</pre>
+	                <%= f.submit "Add Todo", class: "btn btn-default" %>
+                    <button id="checkAll" class="btn btn-default">Mark all As Already Done</button>
+                    <hr>
+
+                    <% @todos.order(created_at: :desc).each do |todo| %>
+	                    <ul id="sortable" class="list-unstyled">
+	                    <li class="ui-state-default">
+	                    	<div class="testform">
+	                        	<div class="checkbox">
+	                        		
+	                             		<div class="test">	
+	                    					<%= link_to 'Complete Task' ,[todo.profile,todo], method: :delete ,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+	                      						:class => 'btn btn-danger checkebox' %>
+	                    				</div>
+		                    			
+		                   				<pre>	
+		                   					<lable>     
+			                                	<dd id="mid" class="text-danger">  #<%= todo.id %></dd>
+				                                <dt  style="font-size: 15px">Titles: <dd style="font-size: 15px"class="text-danger"> <%= todo.title %></dd></dt>
+				                                <dt  style="font-size: 15px">Notes: <dd style="font-size: 15px" class="text-danger"> <%= todo.notes %></dd></dt>  
+			                                	<!-- xem todo list -->	                                	
+				                                <!-- -->
+				                            </lable>
+			                            </pre>	                           
+		                        </div>
+	                        </div>
+	                    </li> 
+	       		   	</ul>
+	               <% end %>
+                <div class="todo-footer">
+                    <strong><span class="count-todos"></span></strong> Items Left
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="todolist">
+             <h1>Already Done</h1>
+                <ul id="done-items" class="list-unstyled"> 
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<% end %>
+
+
+
+
