--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -8,22 +8,26 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="/">
-        Todos - list
+        Todos - App
      </a>
    </div>
+
     <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-              <% if current_user.todo == nil %>
-                    <li><%= link_to 'Create a todo', new_todo_path %></li>
+              <% if current_user.profile == nil %>
+                    <li><%= link_to 'Create a profile', new_profile_path %></li>
               <% else %>
-                    <li><%= link_to 'View Your Task', current_user.todo %> </li>
+                    <li><%= link_to 'Manage Your Task', current_user.profile %> </li>
               <%end %>
-              <li><%= link_to 'Your Profile', edit_user_registration_path %></li><!-- <li class="divider"></li> -->
-              <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
+              <li><%= link_to 'Account', edit_user_registration_path %></li><!-- <li class="divider"></li> -->
+              <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>              
+              </ul>
+            </li>
+          
           <% else %>
-                  <li><%= link_to 'Login', new_user_session_path %></li>
-                  <li><%= link_to 'Signup', new_user_registration_path %></li>
-          <% end %>
+                  <li><%= link_to 'Sign in', new_user_session_path %></li>
+                  <li><%= link_to 'Sign up', new_user_registration_path %></li>
+          <% end %>    
     </ul>
   </div>
 </nav>
