--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -72,7 +72,7 @@
 	             		<%= f.text_field :title , class: "form-control add-todo", placeholder: "Add title" %>
 	             		<%= f.text_field :notes , class: "form-control add-todo2", placeholder: "Add notes" %>
 	             	</pre>
-	                <%= f.submit "Add Todo", class: "btn btn-default" %><hr>
+	                <%= f.submit "Add Todo", class: "btn btn-default" %><br>
                     <button id="checkAll" class="btn btn-default">Mark all As Already Done</button>
                     <hr>
 
