--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -108,7 +108,7 @@
         </div>
         <div class="col-md-6">
             <div class="todolist">
-             <h1>Already Done</h1>
+             <h1>Already Done</h1><hr>
                 <ul id="done-items" class="list-unstyled"> 
                 </ul>
             </div>
