--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,26 +7,26 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">
-        Todos - App
+      <a style="font-size: 25px" class="navbar-brand" href="/">
+        <strong>Todos - App</strong>
      </a>
    </div>
 
     <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
               <% if current_user.profile == nil %>
-                    <li><%= link_to 'Create a profile', new_profile_path %></li>
+                    <li style="font-size: 15px"><%= link_to 'Create Your Task', new_profile_path %></li>
               <% else %>
-                    <li><%= link_to 'Manage Your Task', current_user.profile %> </li>
+                    <li style="font-size: 15px"><%= link_to 'Manage Your Task', current_user.profile %> </li>
               <% end %>
-              <li><%= link_to 'Account', edit_user_registration_path %></li><!-- <li class="divider"></li> -->
-              <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>              
+              <li style="font-size: 15px"><%= link_to 'Account', edit_user_registration_path %></li><!-- <li class="divider"></li> -->
+              <li style="font-size: 15px"><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>              
               </ul>
             </li>
           
           <% else %>
-                  <li><%= link_to 'Sign in', new_user_session_path %></li>
-                  <li><%= link_to 'Sign up', new_user_registration_path %></li>
+                  <li style="font-size: 15px"><%= link_to 'Sign in', new_user_session_path %></li>
+                  <li style="font-size: 15px"><%= link_to 'Sign up', new_user_registration_path %></li>
           <% end %>    
     </ul>
   </div>
