--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="todolist not-done">
-             <h1> Ghi Nhớ Công Việc <br>(Todos)</br></h1>
+             <h2 style="font-size: 30px ; text-align: center"> Ghi Nhớ Công Việc <br>(Todos)</br></h2>
                 <br><input type="text" class="form-control add-todo" placeholder="Add todo"></br>
                     <button id="checkAll" class="btn btn-success">Mark all as done</button>
                    
@@ -38,9 +38,10 @@
         </div>
         <div class="col-md-6">
             <div class="todolist">
-             <h1>Already Done</h1>
+             <h2 style="text-align: center">Already Done</h2>
                 <ul id="done-items" class="list-unstyled">
-                    <li>1/11/2019 Nhận hàng ship trên eBay <button class="remove-item btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-remove"></span></button></li>
+                        <li>1/11/2019 Nhận hàng ship trên eBay <button class="remove-item btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-remove"></span></button></li>
+                    
                 </ul>
             </div>
         </div>
