--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,7 +38,7 @@
         </div>
         <div class="col-md-6">
             <div class="todolist">
-             <h2 style="text-align: center">Already Done</h2>
+             <h2 style="text-align: center">Already Done</h2><hr>
                 <ul id="done-items" class="list-unstyled">
                         <li>1/11/2019 Nhận hàng ship trên eBay <button class="remove-item btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-remove"></span></button></li>
                     
