--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -60,9 +60,9 @@ div.testform{
       width: 100%;
       height: 100%;
 
-}
+} 
 pre { 
-    background-color : #fdffe2;
+    background-color : #dedacc;
     white-space: pre-wrap;
     white-space: -moz-pre-wrap;
     white-space: -pre-wrap;
