--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -35,7 +35,7 @@
 
 			}
            pre { 
-              	background-color : #fdffe2;
+              	background-color : #dedacc;
                 white-space: pre-wrap;
 				white-space: -moz-pre-wrap;
 				white-space: -pre-wrap;
@@ -46,8 +46,9 @@
 				white-space: pre-wrap;
 				white-space: pre\9; /* IE7+ */
 				display: block;
-                
-            } 
+              
+
+            } 	
         
 
 			div.test{
