--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -93,7 +93,7 @@
 		                    	
 		                   				<pre>	
 		                   					<lable>     
-			                                	<dd id="mid" class="text-danger">  #<%= todo.id %></dd>
+			                                	<dd style="text-align: center" class="text-danger">  #<%= todo.id %></dd>
 				                                <dt  style="font-size: 15px">Titles: <dd style="font-size: 15px"class="text-danger"> <%= todo.title %></dd></dt>
 				                                <dt  style="font-size: 15px">Notes: <dd style="font-size: 15px" class="text-danger"> <%= todo.notes %></dd></dt>  
 			                                	<!-- xem todo list -->	                                	
