--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -19,7 +19,7 @@
               <% else %>
                     <li style="font-size: 15px"><%= link_to 'Manage Your Task', current_user.profile %> </li>
               <% end %>
-              <li style="font-size: 15px"><%= link_to 'Account', edit_user_registration_path %></li><!-- <li class="divider"></li> -->
+              <li style="font-size: 15px"><%= link_to 'My ccount', edit_user_registration_path %></li><!-- <li class="divider"></li> -->
               <li style="font-size: 15px"><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>              
               </ul>
             </li>
