--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -15,11 +15,17 @@
     <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
               <% if current_user.profile == nil %>
+                  
                     <li style="font-size: 15px"><%= link_to 'Create Your Task', new_profile_path %></li>
+                  
+
               <% else %>
-                    <li style="font-size: 15px"><%= link_to 'Manage Your Task', current_user.profile %> </li>
+                  <% if has_role?(:admin) %>
+                    <li style="font-size: 15px"><%= link_to 'Manage All Task', profiles_path %> </li>
+                  <% end %>
+                  <li style="font-size: 15px"><%= link_to 'Your Task', current_user.profile%> </li>
               <% end %>
-              <li style="font-size: 15px"><%= link_to 'My ccount', edit_user_registration_path %></li><!-- <li class="divider"></li> -->
+              <li style="font-size: 15px"><%= link_to 'My account', edit_user_registration_path %></li><!-- <li class="divider"></li> -->
               <li style="font-size: 15px"><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>              
               </ul>
             </li>
