--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,45 +1,107 @@
+<div class="page-header">
 
 
-<p id="notice"><%= notice %></p>
 
+
+
+  <h2><strong>Welcome  <small class ="text-success"><%= @profile.username %></small></strong></h2>
+</div>
 
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-
-
+ 
+<%= form_with(model: [@profile, @profile.todos.build]) do |f|%>
 <!------ Include the above in your HEAD tag ---------->
 <%= javascript_include_tag  'home', media: 'all', 'data-turbolinks-track': 'reload' %>
+<style> 
+            .test:hover{
+                
+                text-decoration: none;
+            } 
+            .test{
+                text-align: right;
+            }
+            label {
+            
+                margin-right:50px;
+            }
+            div.testform{
+                 position: relative;
+                  width: 100%;
+                  height: 100%;
+
+            }
+           pre { 
+                background-color : #dedacc;
+                white-space: pre-wrap;
+                white-space: -moz-pre-wrap;
+                white-space: -pre-wrap;
+                white-space: -o-pre-wrap;
+                word-wrap: break-word;
+                line-height: 0.5;   
+                word-break: break-all;
+                white-space: pre-wrap;
+                white-space: pre\9; /* IE7+ */
+                display: block;
+              
+
+            }   
+        
+
+            div.test{
+              position: absolute;
+
+              right: 0;
+              width: 200px;
+              height: 50px;
+             
+            
+            }
+           
+</style>
 <div class="container">
     <div class="row">
         <div class="col-md-6">
             <div class="todolist not-done">
-             <h1>Todos</h1>
-      				<!-- them vao todo -->
-	             	<%= link_to new_todo_path, class: "btn btn-info" do %>
-	  					<i class="glyphicon glyphicon-plus"></i> New Todo
-					<% end %>
-					<!-- -->
-	                <br>--------------------------</br>
-                    <button id="checkAll" class="btn btn-success">Mark all as done</button>
-                   
+                    
+                    <!--<input type="text" class="form-control add-todo" placeholder="Add todo"> them vao todo -->
+                    <pre>
+                        <h1>Todos</h1>
+                        <%= f.text_field :title , class: "form-control add-todo", placeholder: "Add title" %>
+                        <%= f.text_field :notes , class: "form-control add-todo2", placeholder: "Add notes" %>
+                    </pre>
+
+                    <%= f.submit "Add Todo",class: "btn btn-default" %><br>
+                    <button id="checkAll" class="btn btn-default">Mark all As Already Done</button>
                     <hr>
-                    <ul id="sortable" class="list-unstyled">
-                    <li class="ui-state-default">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" value="" />
-                                <pre>
-                                	<!-- xem todo list -->
-	                                <dt class="text-muted" >Title: <dd class="text-danger"> <%= @todo.title %></dd></dt>
-	                                <dt class="text-muted">Notes: <dd class="text-danger"> <%= @todo.notes %></dd></dt>
-                                    <dt class="text-muted">Created at: <dd class="text-danger"> <%= @todo.created_at %></dd></dt>
+
+                    <% @todos.order(created_at: :desc).each do |todo| %>
+                        <ul id="sortable" class="list-unstyled">
+                        <li class="ui-state-default">
+                            <div class="testform">
+                                <div class="checkbox">
                                     
-	                                <!-- -->
-	                            </pre>
-                            </label>
-                        </div>
-                    </li>
-             
-                	</ul>
+                                        <div class="test">  
+
+                                             
+                                            <%= link_to '' ,[todo.profile,todo], method: :delete ,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                                                :class => 'btn btn-danger glyphicon glyphicon-trash checkebox' %>
+                                            
+                                        </div>
+                                
+                                        <pre>   
+                                            <lable>     
+                                                <dd style="text-align: center" class="text-danger">  #<%= todo.id %></dd>
+                                                <dt  style="font-size: 15px">Titles: <dd style="font-size: 15px"class="text-danger"> <%= todo.title %></dd></dt>
+                                                <dt  style="font-size: 15px">Notes: <dd style="font-size: 15px" class="text-danger"> <%= todo.notes %></dd></dt>  
+                                                <!-- xem todo list -->                                      
+                                                <!-- -->
+                                            </lable>
+                                        </pre>                             
+                                </div>
+                            </div>
+                        </li> 
+                    </ul>
+                   <% end %>
                 <div class="todo-footer">
                     <strong><span class="count-todos"></span></strong> Items Left
                 </div>
@@ -53,10 +115,9 @@
             </div>
         </div>
     </div>
-    <%= link_to 'Edit', edit_todo_path(@todo),class: 'btn btn-default btn-xs'%> 
-	<%= link_to 'Manage Todo List', todos_path, class: 'btn btn-default btn-xs'%>
 </div>
 
+<% end %>
 
 
 
