--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -47,6 +47,23 @@
         </div>
     </div>
 </div>
+<hr>
+<% if has_role?(:admin) %>
+    <table class="table table-striped">
+        <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td><%= user.email %></td>
+            <td><%= user.reset_password_token %></td>
+            <td><%= user.created_at %></td>
+            <td>
+           
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+<% end %>
 <body>
 
 
