--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:username) %></th>
+      <th><%= model_class.human_attribute_name(:user) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -16,7 +16,7 @@
       <tr>
         
         <td><%= link_to profile.id, profile_path(profile) %></td>
-        <td><%= link_to profile.username, edit_user_registration_path() %></td>
+        <td><%= link_to profile.username, profile_path(profile) %></td>
         <td><%=l profile.created_at %></td>
         <td>
           <%= link_to t('.show', :default => t("helpers.links.show")),
