--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -14,19 +14,19 @@
   <% end %>
 
   <div class="field form-group">
-    <%= f.label :title, class: 'col-sm-2 control-label' %>
+    <%= f.label :title, class: 'col-md-1 control-label' %>
     <div class="col-sm-10">
       <%= f.text_field :title, class: 'form-control' %>
     </div>
   </div>
   <div class="field form-group">
-    <%= f.label :notes, class: 'col-sm-2 control-label' %>
+    <%= f.label :notes, class: 'col-md-1 control-label' %>
     <div class="col-sm-10">
       <%= f.text_area :notes, class: 'form-control' %>
     </div>
   </div>
   <div class="actions form-group">
-    <div class="col-sm-offset-2 col-sm-10">
+    <div class="col-sm-offset-10">
       <%= f.submit %>
     </div>
   </div>
