--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Todo</h1>
+<h2>Admin - Editing Todo</h2>
 
 <%= render 'form', todo: @todo %>
 
-<%= link_to 'Show', @todo , class: 'btn btn-default btn-xs'%> 
 <%= link_to 'Back', todos_path , class: 'btn btn-default btn-xs' %>
