--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,10 @@
 
 <!------ Include the above in your HEAD tag ---------->
 <body>
+<% @users.each do |user| %>
+    <li>email : <%= user.email %><%= user.roles_name%></li>
+    <hr>
+<% end %>
 <div class="container">
     <div class="row">
         <div class="col-md-6">
