--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -14,14 +14,22 @@
 
     <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
+                <% if current_user.has_role? :admin %>
+                      <li style="padding-top:8px">
+                        <form class="form-inline my-2 my-lg-0" action="/search">
+                          <input class= "form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+
+                      </form>
+                    </li>
+                    <li style="font-size: 15px"><%= link_to 'Manage task list', profiles_path %></li>
+                    
+                <% end %>
                 <% if current_user.profile == nil %>
                       <li style="font-size: 15px"><%= link_to 'Create Your Task', new_profile_path %></li>
                 <% else %>
                     <li style="font-size: 15px"><%= link_to 'Your Task', current_user.profile%> </li>
                 <% end %>
-                <% if current_user.has_role? :admin %>
-                      <li style="font-size: 15px"><%= link_to 'Manage task list', profiles_path %></li>
-                <% end %>
+                
                 <li style="font-size: 15px"><%= link_to 'My account', edit_user_registration_path %></li><!-- <li class="divider"></li> -->
                 <li style="font-size: 15px"><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>          
                 </ul>
