--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <div id="main-container" class="container">
       <!-- body cua website ruby -->
       <div class="row">
-        <div class="col-xs-9">
+        <div class="col-lg-12">
           <%= render 'layouts/flash' %>
          <!-- muc chinh cua homepage website ruby-->
          <%= yield %>
