--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,50 +8,15 @@
 <% end %>
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-12">
             <div class="todolist not-done">
              <h2 style="font-size: 30px ; text-align: center"> Ghi Nhớ Công Việc <br>(Todos)</br></h2>
                 <br><input type="text" class="form-control add-todo" placeholder="Add todo"></br>
-                    <button id="checkAll" class="btn btn-success">Mark all as done</button>
-                   
-                    <hr>
-                    <ul id="sortable" class="list-unstyled">
-                    <li class="ui-state-default">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" value="" />18h 3/1/2020 Tham gia shark tank</label>
-                        </div>
-                    </li>
-                    <li class="ui-state-default">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" value="" />Buy bread</label>
-                        </div>
-                    </li>
-                    <li class="ui-state-default">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" value="" />Teach penguins to fly</label>
-                        </div>
-                    </li>
-                </ul>
-                <div class="todo-footer">
-                    <strong><span class="count-todos"></span></strong> Items Left
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="todolist">
-             <h2 style="text-align: center">Already Done</h2><hr>
-                <ul id="done-items" class="list-unstyled">
-                        <li>1/11/2019 Nhận hàng ship trên eBay <button class="remove-item btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-remove"></span></button></li>
-                    
-                </ul>
+                    <button id="checkAll" class="btn btn-success">Add</button>
             </div>
         </div>
     </div>
 </div>
-<hr>
 
 <body>
 
